SvcMgr class handling service handles

--- a/source/net-service/svc_request/Makefile
+++ b/source/net-service/svc_request/Makefile
@@ -4,6 +4,7 @@ user_rtime_env   := user
 user_build_dir   :=
 user_incl_dir    := $(topdir) . ../include
 user_cpp         := \
+	SvcMgr.cpp \
 	SvcRequestTracker.cpp \
 	SvcRequestPool.cpp \
 	SvcRequest.cpp
