Svc server class implementation

--- a/source/net-service/svc_request/Makefile
+++ b/source/net-service/svc_request/Makefile
@@ -5,6 +5,7 @@ user_build_dir   :=
 user_incl_dir    := $(topdir) . ../include
 user_cpp         := \
 	SvcMgr.cpp \
+	SvcServer.cpp \
 	SvcRequestTracker.cpp \
 	SvcRequestPool.cpp \
 	SvcRequest.cpp
