Fix password in inventory and update a name in a task
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/ansible/tasks/deploy_fds/post_install_setup.yml
+++ b/ansible/tasks/deploy_fds/post_install_setup.yml
@@ -19,7 +19,7 @@
     tags:
         - post-install
 
--   name: render formation.conf
+-   name: render deploy_formation.conf
     template:
         src=../../source/test/formation.conf.j2
         dest=/fds/sbin/deploy_formation.conf
