--- a/ansible/tasks/deploy_fds/install_deps.yml
+++ b/ansible/tasks/deploy_fds/install_deps.yml
@@ -110,7 +110,7 @@
         - install-deps
 
 -   name: install needed pip modules
-    pip: name={{item.name}} version={{item.version}} extra_args='-I'
+    pip: name={{item.name}} version={{item.version}}
     with_items:
         - { name: 'paramiko', version: '1.15.1' }
         - { name: 'scp', version: '0.8.0' }
