FS-602: A few fixes to the test and config files.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -71,8 +71,8 @@ priority = 1
 [volume_smoke1]
 # Name of the client AM to attach to
 client = am1
-# The ID of the volume
-id     = 2
+# The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
+id     = 1
 # The size of the volume
 size   = 10000
 # A policy ID for the volume
