FS-602: Address review comments.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -3,7 +3,12 @@
 #
 # Defines resource, configuration and steps to test
 # Static Migration
+#
+# Note: Do not embed white space is comma delimited lists - test framework bug.
 
+# TEST RESOURCES and TOPOLOGY
+
+# 'user' section currently ignored by the System Test framework.
 [user]
 user_name       = root
 password        = passwd
@@ -47,15 +52,16 @@ ip              = localhost
 fds_root        = /fds/node4
 fds_port        = 7300
 
-# The 'sh' section defines a Access Manager nodes and parameters. The section must be prefixed
-# with 'sh' but is also used as a unique ID for the AM.
+# The 'sh'/'am' section defines a Access Manager nodes and parameters. The section must be prefixed
+# with 'sh' or 'am' but is also used as a unique ID for the AM.
 #
 [am1]
-# Client uses blk services
+# Server uses blk services?
 blk             = false
+# Server node
 fds_node        = node1
 
-# The 'policy' section defines a policy
+# The 'policy' section defines a volume policy
 #
 [policy1]
 # The ID of the policy
@@ -75,29 +81,13 @@ client = am1
 id     = 1
 # The size of the volume
 size   = 10000
-# A policy ID for the volume
+# A policy ID for the volume, must be defined in the 'policy' section
 policy = 1
 # The volume access type, currenty either 's3' or 'blk'
 access = s3
 
-[volume_smoke2]
-client = am1
-id     = 3
-size   = 10000
-policy = 2
-
-[volume_smoke3]
-client = am1
-id     = 4
-size   = 10000
-policy = 2
-
-[volume_smoke4]
-client = am1
-id     = 5
-size   = 10000
-policy = 2
-
+# TEST STEPS or CASES or SCENARIOS
+# Will be ordered according to scenario name.
 
 [scenario_0]
 # Known section. Bring up node node1
@@ -156,6 +146,7 @@ script          = [testcases.TestS3IntFace.TestS3LoadMBLOB]
 param_names     = bucket
 params          = volume_smoke1
 
+# Boot and activate a second node.
 [scenario_7]
 script          = [node2]
 action          = bootup
@@ -166,7 +157,7 @@ script          = [activate]
 delay_wait      = 10
 
 [scenario_8_1]
-# Verify nodes node1 and 2 is up
+# Verify nodes node1 and 2 are up
 script          = [verify]
 state           = up
 # Comma separated list of nodes.
@@ -179,6 +170,7 @@ script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
 param_names     = node1,node2,volume
 params          = node1,node2,volume_smoke1
 
+# Boot and activate a third node.
 [scenario_9]
 script          = [node3]
 action          = bootup
@@ -189,7 +181,7 @@ script          = [activate]
 delay_wait      = 10
 
 [scenario_a_1]
-# Verify nodes node1, 2, and 3 is up
+# Verify nodes node1, 2, and 3 are up
 script          = [verify]
 state           = up
 # Comma separated list of nodes.
@@ -209,6 +201,7 @@ script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
 param_names     = node1,node2,volume
 params          = node1,node3,volume_smoke1
 
+# Boot and activate a fourth node.
 [scenario_b]
 script          = [node4]
 action          = bootup
@@ -219,7 +212,7 @@ script          = [activate]
 delay_wait      = 10
 
 [scenario_c_1]
-# Verify nodes node1, 2, 3, and 4 is up
+# Verify nodes node1, 2, 3, and 4 are up
 script          = [verify]
 state           = up
 # Comma separated list of nodes.
