--- a/ansible/tasks/deploy_fds/install_fds_from_local.yml
+++ b/ansible/tasks/deploy_fds/install_fds_from_local.yml
@@ -3,12 +3,12 @@
     set_fact:
         build: "{{ fds_build if fds_build is defined else 'debug' }}"
 
--   name: copy local fds-platform-{{ build }} to host
+-   name: copy local fds-platform_*{{ build }} to host
     when: deploy_artifact == "local"
     copy: src={{ item }}
       dest=/root/fds-platform.deb
     with_fileglob:
-      - '../../../source/tools/install/pkg-{{ build }}/fds-platform-{{ build }}*.deb'
+      - '../../../source/tools/install/pkg-{{ build }}/fds-platform_*{{ build }}*.deb'
     tags:
       - install-local
 
