force clean of /dev/shm/0x* to allow platformd to restart. This is NOT a clean of data.

--- a/ansible/tasks/deploy_fds/deploy_fds.yml
+++ b/ansible/tasks/deploy_fds/deploy_fds.yml
@@ -3,7 +3,9 @@
 
 - include: stop_fds.yml
 
-- include: clean_fds.yml
+- include: clean_shared_mem.yml
+
+- include: clean_data.yml
   when: clean_fds is defined and clean_fds == "yes"
 
 - include: install_deps.yml
