--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -36,10 +36,14 @@
     - name: install os packages
       apt: name={{item}} force=yes state=present update_cache=yes cache_valid_time=600
       with_items:
+        - automake
+        - cmake
+        - cpanminus
         - git
         - linux-generic
         - linux-headers-generic
         - linux-image-generic
+        - libcurl4-openssl-dev
         - python3-distupgrade
         - ubuntu-release-upgrader-core
         - gdb
@@ -62,6 +66,7 @@
         - libevent-dev
         - libev-dev
         - libfiu-dev
+        - libtool
         - fiu-utils
         - bison
         - flex
@@ -119,6 +124,9 @@
         - httplib2
         - docker-py
         - psutil
+
+    - name: install perl modules
+      cpanm: name=JSON mirror=http://cpan.mirror.vexxhost.com notest=true
 
     - name: create java home script
       copy: src=../files/jdk.sh dest=/etc/profile.d/jdk.sh owner=root group=root mode=0755
