--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -131,7 +131,7 @@
         - JSON
 
     - name: install ruby gems
-      gem: name={{ item }} state=present 
+      gem: name={{ item }} state=present user_install=no
       with_items:
         - bundler
 
