FS-602: Enhanced to enable test fixture cleanup.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -89,57 +89,57 @@ access = s3
 # TEST STEPS or CASES or SCENARIOS
 # Will be ordered according to scenario name.
 
-[scenario_0]
+[scenario_0_1]
 # Known section. Bring up node node1
 script          = [node1]
 action          = bootup
 # Delay wait after running the script. In seconds.
 delay_wait      = 10
 
-[scenario_1]
+[scenario_0_2]
 # Activate the cluster as currently defined.
 script          = [activate]
 delay_wait      = 10
 
-[scenario_2]
+[scenario_0_3]
 # Bring up AM
 script          = [am1]
 action          = bootup
 delay_wait      = 10
 
-[scenario_3]
+[scenario_0_4]
 # Verify node node1 is up
 script          = [verify]
 state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1
 
-[scenario_4]
+[scenario_1]
 # Create a volume policy.
 script          = [policy1]
 action          = create
 delay_wait      = 10
 
-[scenario_5]
+[scenario_2_1]
 # Create smoke1 volume
 script          = [volume_smoke1]
 action          = create
 delay_wait      = 10
 
-[scenario_6]
+[scenario_2_2]
 # Attach smoke1 volume
 script          = [volume_smoke1]
 action          = attach
 
-[scenario_6_1]
+[scenario_3_1]
 # Get an S3 authorization token
 script          = [testcases.TestOMIntFace.TestGetAuthToken]
 
-[scenario_6_2]
+[scenario_3_2]
 # Get an S3 connection
 script          = [testcases.TestS3IntFace.TestS3GetConn]
 
-[scenario_6_3]
+[scenario_3_3]
 # Load some data into our volume/bucket using the S3 interface
 script          = [testcases.TestS3IntFace.TestS3LoadMBLOB]
 # Command separated list of parameter names and values
@@ -147,23 +147,23 @@ param_names     = bucket
 params          = volume_smoke1
 
 # Boot and activate a second node.
-[scenario_7]
+[scenario_4_1]
 script          = [node2]
 action          = bootup
 delay_wait      = 10
 
-[scenario_8]
+[scenario_4_2]
 script          = [activate]
 delay_wait      = 10
 
-[scenario_8_1]
+[scenario_4_3]
 # Verify nodes node1 and 2 are up
 script          = [verify]
 state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2
 
-[scenario_8_2]
+[scenario_5]
 # Check Static DMT Migration from node1 to node2.
 script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
 # Command separated list of parameter names and values
@@ -171,30 +171,30 @@ param_names     = node1,node2,volume
 params          = node1,node2,volume_smoke1
 
 # Boot and activate a third node.
-[scenario_9]
+[scenario_6_1]
 script          = [node3]
 action          = bootup
 delay_wait      = 10
 
-[scenario_a]
+[scenario_6_2]
 script          = [activate]
 delay_wait      = 10
 
-[scenario_a_1]
+[scenario_6_3]
 # Verify nodes node1, 2, and 3 are up
 script          = [verify]
 state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2,node3
 
-[scenario_a_2]
+[scenario_7_1]
 # Check Static DMT Migration from node1 to node2.
 script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node2,volume_smoke1
 
-[scenario_a_3]
+[scenario_7_2]
 # Check Static DMT Migration from node1 to node3.
 script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
 # Command separated list of parameter names and values
@@ -202,43 +202,105 @@ param_names     = node1,node2,volume
 params          = node1,node3,volume_smoke1
 
 # Boot and activate a fourth node.
-[scenario_b]
+[scenario_8_1]
 script          = [node4]
 action          = bootup
 delay_wait      = 10
 
-[scenario_c]
+[scenario_8_2]
 script          = [activate]
 delay_wait      = 10
 
-[scenario_c_1]
+[scenario_8_3]
 # Verify nodes node1, 2, 3, and 4 are up
 script          = [verify]
 state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2,node3,node4
 
-[scenario_c_2]
+[scenario_9_1]
 # Check Static DMT Migration from node1 to node2.
 script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node2,volume_smoke1
 
-[scenario_c_3]
+[scenario_9_2]
 # Check Static DMT Migration from node1 to node3.
 script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node3,volume_smoke1
 
-[scenario_c_4]
+[scenario_9_3]
 # Check Static DMT Migration from node1 to node4.
 script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node4,volume_smoke1
 
+[scenario_a]
+# Verify nodes node1, 2, 3, and 4 are up
+script          = [verify]
+state           = up
+# Comma separated list of nodes.
+fds_nodes       = node1,node2,node3,node4
+
+# Remove, shutdown, and clean the install of the fourth node.
+[scenario_b_1]
+script          = [node4]
+action          = remove
+delay_wait      = 10
+
+[scenario_b_2]
+script          = [node4]
+action          = shutdown
+
+[scenario_b_3]
+script          = [node4]
+action          = cleaninst
+
+# Now the third node.
+[scenario_c_1]
+script          = [node3]
+action          = remove
+delay_wait      = 10
+
+[scenario_c_2]
+script          = [node3]
+action          = shutdown
+
+[scenario_c_3]
+script          = [node3]
+action          = cleaninst
+
+# The second node.
+[scenario_d_1]
+script          = [node2]
+action          = remove
+delay_wait      = 10
+
+[scenario_d_2]
+script          = [node2]
+action          = shutdown
+
+[scenario_d_3]
+script          = [node2]
+action          = cleaninst
+
+# Finally the first node.
+[scenario_e_1]
+script          = [node1]
+action          = remove
+delay_wait      = 10
+
+[scenario_e_2]
+script          = [node1]
+action          = shutdown
+
+[scenario_e_3]
+script          = [node1]
+action          = cleaninst
 
 
 # Other scenario/scripts needing System Test infrustructure support.
