down to one set of templates (yay) and cleaned up location of remaining templates to get things a bit more organized

--- a/ansible/tasks/deploy_fds/install_deps.yml
+++ b/ansible/tasks/deploy_fds/install_deps.yml
@@ -12,7 +12,7 @@
 
 -   name: install_limits_conf
     template:
-        src=../templates/fds_limits.conf
+        src=../templates/deploy_fds/fds_limits.conf
         dest=/etc/security/limits.conf
         owner=root
         group=root
