--- a/ansible/tasks/deploy_fds/post_install_setup.yml
+++ b/ansible/tasks/deploy_fds/post_install_setup.yml
@@ -49,7 +49,7 @@
 
 -   name: render_init_scripts
     template:
-        src=../templates/{{item}}-init.conf.j2
+        src=../templates/deploy_fds/{{item}}-init.conf.j2
         dest=/etc/init/{{item}}.conf
         owner=root
         group=root
