--- a/ansible/tasks/deploy_fds/stop_fds.yml
+++ b/ansible/tasks/deploy_fds/stop_fds.yml
@@ -17,7 +17,7 @@
         - shutdown
 
 -   fail: msg="{{item.invocation.module_args}} does not exist! This is most likely due to a prior failed deployment attempt. Please manually uninstall fds-platform on your target hosts and try again."
-    when: not item.stat.exists
+    when: not item.stat.exists and fds_installed|success
     with_items: init_stat.results
     tags:
         - shutdown
