added a name to the fail task for init script checks so that it doesn't cause confusion by spewing 'FAIL' messages that are actually being skipped...

--- a/ansible/tasks/deploy_fds/stop_fds.yml
+++ b/ansible/tasks/deploy_fds/stop_fds.yml
@@ -16,7 +16,8 @@
     tags:
         - shutdown
 
--   fail: msg="{{item.invocation.module_args}} does not exist! This is most likely due to a prior failed deployment attempt. Please manually uninstall fds-platform on your target hosts and try again."
+-   name: init script presence check
+    fail: msg="{{item.invocation.module_args}} does not exist! This is most likely due to a prior failed deployment attempt. Please manually uninstall fds-platform on your target hosts and try again."
     when: not item.stat.exists and fds_installed|success
     with_items: init_stat.results
     tags:
