added clean of /fds/var/db to ansible clean tasks to better mimic fds-tool -d -c

--- a/ansible/tasks/deploy_fds/clean_data.yml
+++ b/ansible/tasks/deploy_fds/clean_data.yml
@@ -4,6 +4,7 @@
     with_items:
         - /fds/bin/*.core
         - /fds/bin/core
+        - /fds/var/db
         - /fds/var/logs
         - /fds/var/stats
         - /corefiles/*.core
