FS-729: Add SM checker to the DM Static Migration test.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -163,12 +163,12 @@ state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2
 
-[scenario_5]
-# Check Static DMT Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
-# Command separated list of parameter names and values
-param_names     = node1,node2,volume
-params          = node1,node2,volume_smoke1
+#[scenario_5]
+## Check Static DMT Migration from node1 to node2.
+#script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node2,volume_smoke1
 
 # Boot and activate a third node.
 [scenario_6_1]
@@ -187,19 +187,19 @@ state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2,node3
 
-[scenario_7_1]
-# Check Static DMT Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
-# Command separated list of parameter names and values
-param_names     = node1,node2,volume
-params          = node1,node2,volume_smoke1
+#[scenario_7_1]
+## Check Static DMT Migration from node1 to node2.
+#script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node2,volume_smoke1
 
-[scenario_7_2]
-# Check Static DMT Migration from node1 to node3.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
-# Command separated list of parameter names and values
-param_names     = node1,node2,volume
-params          = node1,node3,volume_smoke1
+#[scenario_7_2]
+## Check Static DMT Migration from node1 to node3.
+#script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node3,volume_smoke1
 
 # Boot and activate a fourth node.
 [scenario_8_1]
@@ -218,26 +218,26 @@ state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2,node3,node4
 
-[scenario_9_1]
+#[scenario_9_1]
 # Check Static DMT Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
-# Command separated list of parameter names and values
-param_names     = node1,node2,volume
-params          = node1,node2,volume_smoke1
+#script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node2,volume_smoke1
 
-[scenario_9_2]
-# Check Static DMT Migration from node1 to node3.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
-# Command separated list of parameter names and values
-param_names     = node1,node2,volume
-params          = node1,node3,volume_smoke1
+#[scenario_9_2]
+## Check Static DMT Migration from node1 to node3.
+#script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node3,volume_smoke1
 
-[scenario_9_3]
-# Check Static DMT Migration from node1 to node4.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
-# Command separated list of parameter names and values
-param_names     = node1,node2,volume
-params          = node1,node4,volume_smoke1
+#[scenario_9_3]
+## Check Static DMT Migration from node1 to node4.
+#script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node4,volume_smoke1
 
 [scenario_a]
 # Verify nodes node1, 2, 3, and 4 are up
@@ -246,7 +246,7 @@ state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2,node3,node4
 
-# Remove, shutdown, and clean the install of the fourth node.
+# Remove from the cluster and shutdown the fourth node.
 [scenario_b_1]
 script          = [node4]
 action          = remove
@@ -255,10 +255,6 @@ delay_wait      = 10
 [scenario_b_2]
 script          = [node4]
 action          = shutdown
-
-[scenario_b_3]
-script          = [node4]
-action          = cleaninst
 
 # Now the third node.
 [scenario_c_1]
@@ -270,10 +266,6 @@ delay_wait      = 10
 script          = [node3]
 action          = shutdown
 
-[scenario_c_3]
-script          = [node3]
-action          = cleaninst
-
 # The second node.
 [scenario_d_1]
 script          = [node2]
@@ -283,10 +275,6 @@ delay_wait      = 10
 [scenario_d_2]
 script          = [node2]
 action          = shutdown
-
-[scenario_d_3]
-script          = [node2]
-action          = cleaninst
 
 # Finally the first node.
 [scenario_e_1]
@@ -298,9 +286,31 @@ delay_wait      = 10
 script          = [node1]
 action          = shutdown
 
-[scenario_e_3]
-script          = [node1]
-action          = cleaninst
+# Before we cleanup the installation areas, let's run the SM Checker.
+# We do it here since the check utility requires that the cluster
+# be down (by default, anyway).
+[scenario_f]
+# Check SM consistency.
+script          = [testcases.TestFDSSysVerify.TestVerifySMConsistency]
+# Command separated list of parameter names and values
+
+# Now clean up installation areas.
+#[scenario_g_1]
+#script          = [node4]
+#action          = cleaninst
+
+#[scenario_g_2]
+#script          = [node3]
+#action          = cleaninst
+
+#[scenario_g_3]
+#script          = [node2]
+#action          = cleaninst
+
+#[scenario_g_4]
+#script          = [node1]
+#action          = cleaninst
+
 
 
 # Other scenario/scripts needing System Test infrustructure support.
