--- a/source/stor-mgr/Makefile
+++ b/source/stor-mgr/Makefile
@@ -3,7 +3,7 @@ user_target       := exe
 user_std_libs     := true
 user_rtime_env    := user
 speedup           = -j $(threads)
-user_build_dir    := smlib policy include migrations platform
+user_build_dir    := smlib policy include platform
 
 # TODO: avoid include across components, put in include dir instead.
 #
