FS-602: Fix a class name.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -164,8 +164,8 @@ state           = up
 fds_nodes       = node1,node2
 
 [scenario_5]
-# Check Static DMT Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+# Check DM Static Migration from node1 to node2.
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node2,volume_smoke1
@@ -189,14 +189,14 @@ fds_nodes       = node1,node2,node3
 
 [scenario_7_1]
 # Check Static DMT Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node2,volume_smoke1
 
 [scenario_7_2]
 # Check Static DMT Migration from node1 to node3.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node3,volume_smoke1
@@ -220,21 +220,21 @@ fds_nodes       = node1,node2,node3,node4
 
 [scenario_9_1]
 # Check Static DMT Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node2,volume_smoke1
 
 [scenario_9_2]
 # Check Static DMT Migration from node1 to node3.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node3,volume_smoke1
 
 [scenario_9_3]
 # Check Static DMT Migration from node1 to node4.
-script          = [testcases.TestFDSSysVerify.TestVerifyStaticDMTMigration]
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
 # Command separated list of parameter names and values
 param_names     = node1,node2,volume
 params          = node1,node4,volume_smoke1
